MD iMap Template Change Log

8/4/2014
* Update to ArcGIS JS API 3.10  (Check out how the measure tool operates now in 3.10!)
* Popup improvements
	** Fixed for titlebar in themes; maximize, minimize, remove buttons
	** With JS API 3.10, better display with selected feature
	** removed previous pointers in template in favor of default ones via JS API 3.10 
* Update to the AddLayers.js for Add Data tab providing more layers (map services) for user.
* Addition of new themes:
	** "earth1" --darker browns, like chocolates
	** "earth2" --lighter browns, like mustards
	** "black" --simililar to "imap" but darker
* Query tool improvements:
	** better phrasing to instruct user on how to enter a value for a selected field
	** making any user input to convert to upper case and compare to an upper case so to ensure non case sensitive attribute queries. 
* More or improved in-code commentary
* CSS improvements
    ** Better consistent deployment of CSS theme in HTM framework
    ** Addition of "red" color for hover event over slider bar between map and left pane to alert user of ability to move the slider between the left and map panes.

7/3/2014
* CSS corrections to allow for color changes to Home Button and recently added tools when themes are changed.  (Themes:  imap, gray, blue, green, purple, orange)
* Placement adjustments to Search and Zoom to County tools to allow better map viewing on smaller form factor screens.
* Adjustment in Table of Contents (_TOCNode.js) to correct anomalies between map symbology and Table of Contents symbology.  ("tempArray[j].url == rends[i].url" now using label, "tempArray[j].label == rends[i].label")
* Changed zoom extents for the ZoomToCounty tool.  Some counties were zooming within their boundaries. 
* Changed a parameter in Query to "like" instead of "=" to give more leeway for a choice in select by attribute query.