@@ -17,7 +17,8 @@
 				<p style="margin-bottom: 0">Fields:</p>
 				<select id="fieldCbo"> </select>
 				<div id="fieldMath">
-					<p></p>
+				    <!--Same text as in querying.js -->
+					<p>Type in a value to match possible values in the field that you selected above.  For example, if the field is &quot;City&quot;, you might type in &quot;Annapolis&quot; or even &quot;anna&quot;. </p>
 					<input id="fieldValue">
 				</div>
 				<div id="btnDiv">
